<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appname="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wesley.offers_v2.MainActivity" >

    <item
        android:id="@+id/starred_messages"
        android:orderInCategory="100"
        android:title="@string/starred_messages"
        appname:showAsAction="collapseActionView|never"/>
    
    <item
        android:id="@+id/save_list"
        android:orderInCategory="100"
        android:title="@string/save_list"
        appname:showAsAction="collapseActionView|never"/>
    
    <item
        android:id="@+id/black_list"
        android:orderInCategory="100"
        android:title="@string/black_list"
        appname:showAsAction="collapseActionView|never"/>
    
    <item
        android:id="@+id/email_list"
        android:orderInCategory="100"
        android:title="@string/email_list"
        appname:showAsAction="collapseActionView|never"/>
    
    
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          appname:showAsAction="ifRoom|collapseActionView"
          appname:actionViewClass="android.support.v7.widget.SearchView"
          />

        


</menu>
