<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    tools:context=".InternListActivity"    >
     <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >   
    <TextView
        android:id="@+id/profile_choose_page1_disclamimerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="7dp"        
        android:textSize = "30sp"
        android:text="DISCLAIMER 聲明" />    
    <TextView
        android:id="@+id/profile_choose_page1_disclamimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"        
        android:text="@string/profile_page1_disclaimer" />
	</LinearLayout>
</android.support.v7.widget.CardView>

 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    tools:context=".InternListActivity"    >
     <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >   
    <TextView
        android:id="@+id/profile_choose_page1_introTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="7dp"        
        android:textSize = "20sp"
        android:text="WHAT IS OFFERS?" />    
    <TextView
        android:id="@+id/profile_choose_page1_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"        
        android:text="@string/profile_page1_intro" />
	</LinearLayout>
</android.support.v7.widget.CardView> 
    
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    tools:context=".InternListActivity" >
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
     <TextView
         android:id="@+id/profile_choose_page1_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
         android:layout_marginTop="15dp"
         android:text="@string/profile_page1_username" />
     <EditText
         android:id="@+id/profile_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="15dp"
         android:hint="@string/profile_page1_username_hint"
         android:maxLength="12"
         android:singleLine="true" >
     </EditText>
    </LinearLayout>
 </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/profile_choose_page1_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="right|center_vertical"
        android:text="@string/form_submit"/>
</LinearLayout>